# hyperqr

./: .gitignore  README.md  deno.jsonc  install.sh  main.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vercel.json
.github/workflows/: deploy.yml
api/: index.ts
pages/: home.tsx
patches/: fast_qr@0.9.0.patch
public/: index.html  style.css
qrlib/: Cargo.toml  install.sh  package.json
qrlib/bindings/: bindings.ts
qrlib/src/: qr.rs
wasm/pkg/: package.json  qrlib.d.ts  qrlib.js  qrlib_bg.wasm  qrlib_bg.wasm.d.ts
wasm/src/: qr.rs
