[package]
name = "qrlib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deno_bindgen = "0.8.1"
fast_qr = { version = "0.9.0", features = ["svg"] }
qrcode-generator = "4.1.8"
serde = { version = "1.0.183", features = ["derive"] }

[lib]
name = "qrlib"
path = "src/qr.rs"
crate-type = ["cdylib"]
