[package]
name = "qrlib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fast_qr = { version = "0.9.0", features = ["svg"] }
serde = { version = "1.0.183", features = ["derive"] }
wasm-bindgen = "0.2.87"

[lib]
name = "qrlib"
path = "src/qr.rs"
crate-type = ["cdylib", "rlib"]
